[package]
name = "giffer"
version = "0.1.0"
edition = "2021"
authors = ["Small San"]
readme = "README.md"
repository = "https://github.com/Smallsan/giffer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fenpix"
crate-type = ["lib"]

[dependencies]
image = "0.25.2"

